; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/sn9c102/extr_sn9c102_core.c_sn9c102_sof_length.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/sn9c102/extr_sn9c102_core.c_sn9c102_sof_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sn9c102_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.sn9c102_device*)* @sn9c102_sof_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @sn9c102_sof_length(%struct.sn9c102_device* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.sn9c102_device*, align 8
  store %struct.sn9c102_device* %0, %struct.sn9c102_device** %3, align 8
  %4 = load %struct.sn9c102_device*, %struct.sn9c102_device** %3, align 8
  %5 = getelementptr inbounds %struct.sn9c102_device, %struct.sn9c102_device* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %10 [
    i32 132, label %7
    i32 131, label %7
    i32 130, label %8
    i32 129, label %9
    i32 128, label %9
  ]

7:                                                ; preds = %1, %1
  store i64 12, i64* %2, align 8
  br label %11

8:                                                ; preds = %1
  store i64 18, i64* %2, align 8
  br label %11

9:                                                ; preds = %1, %1
  store i64 62, i64* %2, align 8
  br label %11

10:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %11

11:                                               ; preds = %10, %9, %8, %7
  %12 = load i64, i64* %2, align 8
  ret i64 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
